# readmitrisk

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: eval.yaml  features.yaml  synthea.yaml
data/sample/: cohort.parquet  sample_meta.json
docker/: pipeline.Dockerfile  synthea-entrypoint.sh  synthea.Dockerfile
sql/: cohort.sql
src/readmitrisk/: __init__.py  cli.py  config.py  duckdb_util.py  paths.py  sample_build.py
src/readmitrisk/cohort/: __init__.py
src/readmitrisk/evaluation/: __init__.py  calibration.py  evaluate.py  metrics.py  plots.py
src/readmitrisk/explain/: __init__.py  shap_drivers.py
src/readmitrisk/fairness/: __init__.py  audit.py  plots.py
src/readmitrisk/generate/: __init__.py  fallback.py  synthea.py
src/readmitrisk/models/: __init__.py  base.py  cox.py  dataset.py  pipeline.py  preprocess.py  rsf.py
src/readmitrisk/ui/: __init__.py  app.py  backend.py
tests/: conftest.py  test_cohort.py  test_cohort_golden.py  test_evaluation.py  test_explain.py  test_fairness.py  test_generate.py  test_metrics_censoring.py  test_models.py  test_ui_app.py  test_ui_backend.py
