[project]
name = "readmitrisk"
version = "0.1.0"
description = "ReadmitRisk: survival analysis of time-to-hospital-readmission with calibration and a fairness audit, on synthetic Synthea EHR data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "ReadmitRisk" }]
keywords = ["survival-analysis", "healthcare", "readmission", "fairness", "calibration"]

dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "duckdb>=1.1",
    "scipy>=1.11",
    "scikit-learn>=1.4,<1.7",
    "lifelines>=0.29",
    "scikit-survival>=0.23",
    "shap>=0.46",
    # shap pulls numba/llvmlite; pin modern versions so prebuilt wheels are used on
    # Python 3.11 (the old defaults the resolver picks don't support 3.11).
    "numba>=0.60",
    "llvmlite>=0.43",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "streamlit>=1.36",
    "fairlearn>=0.10",
]

[project.scripts]
readmitrisk = "readmitrisk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readmitrisk"]

[tool.uv]
# Keep the dev tooling in the default sync so `uv sync` installs everything the
# Makefile/CI needs in one shot.
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PD"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # function calls in argument defaults (argparse/typer patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests that run the full pipeline (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # scikit-survival still calls the deprecated numpy.trapz internally.
    "ignore:`trapz` is deprecated:DeprecationWarning",
    # shap's colormap setup uses soon-to-be-deprecated matplotlib colormap setters.
    "ignore:The set_(bad|over|under) function will be deprecated:PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["readmitrisk"]
branch = true
